# koyubi

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  Cargo.toml  DEVELOPMENT.md  KEYMAP.md  LICENSE  README.md  config.toml.example
.github/workflows/: ci.yml
crates/dict-tool/: Cargo.toml
crates/dict-tool/src/: main.rs
crates/engine/: Cargo.toml
crates/engine/src/: composer.rs  config.rs  dict.rs  lib.rs  romaji.rs
crates/tsf/: Cargo.toml  build.rs
crates/tsf/res/: res.rc
crates/tsf/src/: candidate_ui.rs  class_factory.rs  edit_session.rs  globals.rs  key_event.rs  lang_bar.rs  lib.rs  register.rs  text_service.rs
installer/: koyubi.iss
installer/winget/: Koyubi.SKK.installer.yaml  Koyubi.SKK.locale.en-US.yaml
