[package]
name = "koyubi-tsf"
version = "0.1.0"
edition = "2021"
description = "Windows TSF (Text Services Framework) IME for Koyubi SKK"
license = "MIT"

[lib]
crate-type = ["cdylib"]

[dependencies]
koyubi-engine = { path = "../engine" }
windows-core = "0.61"
windows = { version = "0.61", features = [
    "Win32_Foundation",
    "Win32_Globalization",
    "Win32_Graphics_Gdi",
    "Win32_System_Com",
    "Win32_System_LibraryLoader",
    "Win32_System_Ole",
    "Win32_System_Registry",
    "Win32_System_SystemServices",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_TextServices",
    "Win32_UI_WindowsAndMessaging",
]}
